templates/opencart_template.yaml
---
# Source: opencart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencart-svc
  labels:
    helm.sh/chart: opencart-0.3
    app-name: opencart
    component: "ecommerce-server"
    hostNetwork: "false"
    internal-service: "true"
    managed-by: chynten
    created-by: chynten
    version: "3.0.3-8"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app-name: opencart
---
# Source: opencart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencart-deployment
  labels:
    helm.sh/chart: opencart-0.3
    app-name: opencart
    component: "ecommerce-server"
    hostNetwork: "false"
    internal-service: "true"
    managed-by: chynten
    created-by: chynten
    version: "3.0.3-8"
spec:
  replicas: 1
  revisionHistoryLimit: 
  selector:
    matchLabels:
      app-name: opencart
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app-name: opencart
    spec:
      hostNetwork: false
      restartPolicy: Always
      containers:
        - name: opencart
          image: "bitnami/opencart:3.0.3-8"
          imagePullPolicy: IfNotPresent
          securityContext:
            {}
          resources:
            {}
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
          - name: data
            mountPath: /bitnami/opencart
            subPath: opencart/data
          - name: data
            mountPath: /bitnami/opencart_storage/
            subPath: opencart/storage
      securityContext:
        {}
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: external-data-pvc
---
# Source: opencart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencart-ingress
  labels:
    helm.sh/chart: opencart-0.3
    app-name: opencart
    component: "ecommerce-server"
    hostNetwork: "false"
    internal-service: "true"
    managed-by: chynten
    created-by: chynten
    version: "3.0.3-8"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.org/client-max-body-size: 100m
spec:
  tls:
    - hosts:
        - "cart.example.com"
      secretName: opencart-letsencrypt-certificate
  rules:
    - host: "cart.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opencart-svc
                port:
                  number: 8080
